<resources>
    <string name="app_name">AnimationExamples</string>

    <string name="android_animations">Android Animations</string>
    <string name="fade_animation">Fade Animation</string>
    <string name="basic_animations">Basic Animations</string>
    <string name="explode_animation">Explode Animation</string>
    <string name="slide_animation">Slide Animation</string>
    <string name="animation_changing_scenes">Animation Changing Scenes</string>
    <string name="change_scene">Change Scene</string>
    <string name="previous_scene">Previous Scene</string>
    <string name="second_screen">Second Screen</string>
    <string name="transition_between_activity">Transition Between Activity</string>
    <string name="animation_between_activity">Animation Between Activity</string>
    <string name="choose_animation">Choose To See Animation</string>
</resources>