<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_24"
    tools:context=".BasicAnimationFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:gravity="center"
        android:text="@string/android_animations"
        android:textSize="@dimen/text_size_24" />

    <FrameLayout
        android:id="@+id/animated_container"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:src="@drawable/earth_with_glasses"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fade_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fade_animation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/explode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explode_animation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/slide_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_animation" />

</LinearLayout>